styles.css
* {
    font-family: "DM Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-style: normal;
}

body, html {
    background: hsl(0deg, 0%, 97%);
    margin: 0;
}

a {
    position: fixed;
    top: 0.5rem;
    font-size: 0.8rem;
    right: 0.5rem;
    color: hsl(0deg, 0%, 40%);
    text-decoration: none;
}

main {
    width: 100%;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    max-width: 14rem;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

img {
    width: 100%;
    height: 100%;
    animation: spin 100s linear;
}

span {
    font-weight: 400;
    font-size: 2.5rem;
}

button {
    background: white;
    padding: 0.4rem 0.8rem;
    border: none;
    border-radius: 10rem;
    transition: all 0.2s ease;
    cursor: crosshair;
}

button:hover {
    background-color: black;
    color: white;
}

form {
    background: hsl(0deg, 0%, 97%);
    position: fixed;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: opacity 0.5s ease;
}

form > div {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1rem;
    transition: opacity 0.5s ease;
    transition-delay: 0.6s;
}

input {
    padding: 0.4rem 0.8rem;
    background-color: hsl(0deg, 0%, 97%);
    border: 1px solid hsl(0deg, 0%, 86%);
    border-radius: 10rem;
}

input::placeholder {
   color: hsl(0deg, 0%, 70%);
}

.hidden {
    opacity: 0;
    pointer-events: none;
}

@keyframes spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

